Feature: Add captus

--- a/Chrome-Dino-Game/index.html
+++ b/Chrome-Dino-Game/index.html
@@ -12,12 +12,22 @@
 <body>
     <div id="board">
         <div id="background">
+            <div id="scoreContainer">
+                Score: <span id="score">0</span>
+            </div>
         </div>
         <div id="player">
             <img src="./assets/player.png" alt="player dino">
         </div>
+        <div id="cactus" class="animatedCactus">
+            <img src="./assets/captus.png" alt="obstacle">
+        </div>
+    </div>
+    <div class="menu">
+        <button id='button-flow' class="button"></button>
     </div>
     <script src="./scripts.js"></script>
 </body>
+
 
 </html>
