--- a/Chrome-Dino-Game/index.html
+++ b/Chrome-Dino-Game/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div id="player">
-            <img src="./assets/player.png" alt="player dino">
+            <img src="./assets/player.png" alt="\Users\HP\Downloads\player.png.png"
         </div>
         <div id="cactus" class="animatedCactus">
             <img src="./assets/captus.png" alt="obstacle">
